--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,3 +1,4 @@
 <h2 id='title'>Welcome to Ember.js</h2>
-
+{{link-to 'FRIENDS' 'mrFriends'}} from
+<a href='http://app.konacloud.io/api/daniel/embercli101/mr_friends'>http://app.konacloud.io/api/daniel/embercli101/mr_friends</a>
 {{outlet}}
